compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__custom_1.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 783
expression: "\npub type Type {\n  One\n  Two\n}\n\npub fn main(x) {\n  case x {\n    One -> 1\n  }\n}\n"
---

warning: Inexhaustive Patterns
   ┌─ /src/warning/wrn.gleam:8:3
   │  
 8 │ ╭   case x {
 9 │ │     One -> 1
10 │ │   }
   │ ╰───^

This case expression does not have a pattern for all possible values.
If is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Two

In a future version of Gleam this will become a compile error.


