compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__discard_6.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 719
expression: "\npub type Thing {\n  Thing(a: Bool, b: Bool)\n}\n\npub fn main(x) {\n  case x {\n    Thing(False, ..) -> 1\n  }\n}\n"
---

warning: Inexhaustive patterns
  ┌─ /src/warning/wrn.gleam:7:3
  │  
7 │ ╭   case x {
8 │ │     Thing(False, ..) -> 1
9 │ │   }
  │ ╰───^

This case expression does not have patterns for all possible values.
If is run on one of the values without a pattern then it will crash.

The missing clauses are:

    Thing(True, _) -> todo

In a future version of Gleam this will become a compile error.


