compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__empty_case_of_external.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 893
expression: "\ntype Thingy\n\npub fn main(x: Thingy) {\n  case x {\n  }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:5:3
  │  
5 │ ╭   case x {
6 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values.
If it is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _
