compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__empty_case_of_generic.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 909
expression: "\npub fn main(x: something) {\n  case x {\n  }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values.
If it is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _
