compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__guard.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 756
expression: "\npub fn main(x, y) {\n  case x {\n    _ if y -> 1\n  }\n}\n"
---

warning: Inexhaustive Patterns
  ┌─ /src/warning/wrn.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │     _ if y -> 1
5 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values.
If is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _

In a future version of Gleam this will become a compile error.


